<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_label"
        android:textSize="22sp"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:layout_constraintRight_toLeftOf="@id/start_date"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingBottom="15dp"
        app:layout_constraintStart_toEndOf="@id/start_date_label"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_label"
        android:textSize="22sp"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:layout_constraintRight_toLeftOf="@id/end_date"
        app:layout_constraintTop_toBottomOf="@id/start_date_label"/>

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingBottom="15dp"
        app:layout_constraintStart_toEndOf="@id/end_date_label"
        app:layout_constraintTop_toBottomOf="@id/start_date_label" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_start_date"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/edit_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_end_date"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/update"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editButton" />

    <android.support.constraint.Group
        android:id="@+id/viewTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="title, start_date, end_date, start_date_label, end_date_label" />

    <android.support.constraint.Group
        android:id="@+id/editTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="edit_title, edit_start_date, edit_end_date" />


</android.support.constraint.ConstraintLayout>

